# Mandala

./: .env.example  .gitignore  CI_CD_AUDIT.md  CONTRIBUTING.md  DATA_PRIVACY.md  Dockerfile  LICENSE  NOTICE  README.md  RISKS.md  SCHEMA.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  fleet_intelligence.yml
.mcp/: server.json
connectors/descartes/: Dockerfile  README.md  connector.py
connectors/samsara/: Dockerfile  README.md  connector.py  requirements.txt
dbt-mandala/: README.md  SIGNALS.md  dbt_project.yml  packages.yml
dbt-mandala/macros/: mandala_json.sql  mandala_source.sql  mandala_urn.sql
dbt-mandala/models/marts/: _marts.yml  mandala_border_crossings.sql  mandala_carbon_per_trip.sql  mandala_carrier_safety_profile.sql  mandala_cold_chain_compliance.sql  mandala_intermodal_legs.sql  mandala_lane_intelligence.sql  mandala_shipments.sql  mandala_trucks_current.sql
dbt-mandala/models/staging/: _stg_mandala__models.yml  stg_mandala__alerts.sql  stg_mandala__cold_chain_readings.sql  stg_mandala__customs_entries.sql  stg_mandala__events.sql  stg_mandala__geofence_crossings.sql  stg_mandala__shipment_milestones.sql  stg_mandala__truck_positions.sql
dbt-mandala/seeds/: mandala_border_pois.csv
deploy/: nginx.conf  otel-collector.yaml  sentinel.conf
docs/: MATERIALIZED_VIEWS.md
docs/integrations/: aurora.md  sap.md
docs/standards/: iof-mapping.md
examples/cross_border_demo/: README.md  demo.py
helm/mandala/: Chart.yaml  values.yaml
helm/mandala/templates/: _helpers.tpl  api-deployment.yaml  redis-deployment.yaml  servicemonitor.yaml  worker-deployment.yaml  worker-service.yaml
k8s/: api-deployment.yaml  ingress.yaml  namespace.yaml  redis-deployment.yaml  secret.yaml  servicemonitor.yaml  worker-deployment.yaml
kinaxis/: SIGNALS.md  connector.py
mandala-rust-ext/: Cargo.toml  README.md  ZK_MPC_CEREMONY.md  ZK_SECURITY_AUDIT.md  pyproject.toml
mandala-rust-ext/mandala_rust_ext/: __init__.py
mandala-rust-ext/src/: lib.rs
mandala-rust-ext/src/zk/: circuits.rs  keys.rs  mod.rs  mpc_ceremony.rs  proof.rs  trusted_setup.rs  types.rs
palantir/: README.md  stub_connector.py
schemas/: SCHEMA_SPECIFICATION.md
schemas/templates/: custom-vendor-example.yaml
scripts/: generate_fleet_report.py  generate_mock_events.py  validate_schema.py
src/mandala/: __init__.py  alerts.py  app.py  cli.py  fmcsa.py  loadboard.py  projection.py  rail.py  settings.py  worker.py
src/mandala/connectors/: __init__.py  base.py
src/mandala/connectors/aurora/: __init__.py  connector.py
src/mandala/connectors/cargowise/: __init__.py  client.py  connector.py  normalize.py  webhook.py
src/mandala/connectors/coast/: __init__.py  client.py  connector.py  normalize.py
src/mandala/connectors/dat/: __init__.py  client.py  connector.py
src/mandala/connectors/descartes/: __init__.py
src/mandala/connectors/descartes/macropoint/: __init__.py  client.py  connector.py  normalize.py  webhook.py
src/mandala/connectors/efs/: __init__.py  client.py  connector.py  normalize.py
src/mandala/connectors/epcis/: __init__.py  adapter.py
src/mandala/connectors/fleetcor/: __init__.py  client.py  connector.py  normalize.py
src/mandala/connectors/fmcsa/: __init__.py  client.py  connector.py  normalize.py
src/mandala/connectors/rail/: __init__.py  base.py  vizion.py
src/mandala/connectors/samsara/: __init__.py  client.py  connector.py  normalize.py  outbound.py  webhook.py
src/mandala/connectors/sap/: __init__.py  connector.py
src/mandala/connectors/truckstop/: __init__.py  client.py  connector.py
src/mandala/connectors/wex/: __init__.py  client.py  connector.py  normalize.py
src/mandala/core/: __init__.py  adaptive_backpressure.py  alert_aggregation.py  alert_routing.py  backpressure.py  bus.py  cdc.py  circuit_breaker.py  connector.py  coordinator.py  dead_letter.py  detector_sandbox.py  event_log.py  file_watcher.py  geometric_hash.py  hmac.py  metrics.py  rate_limit.py  reorder_buffer.py  replay.py  resilience.py  scheduler.py  state.py  stator_latch.py
src/mandala/core/compliance/: __init__.py  access_logger.py  change_tracker.py  data_residency.py  pii_detector.py
src/mandala/core/events/: __init__.py  envelope.py  idempotency.py  semconv.py  types.py
src/mandala/core/observability/: __init__.py  otlp_exporter.py
src/mandala/core/schema/: __init__.py  geo.py  identifiers.py  party.py  shipment.py  truck.py
src/mandala/core/zk/: __init__.py  circuits.py  proving_service.py  verifier.py
src/mandala/detectors/: warehouse.py
src/mandala/mcp/: __init__.py  server.py
src/mandala/sinks/: __init__.py  base.py  jsonl.py  runner.py
src/mandala/views/: __init__.py  base.py  bitmap.py  dead_zone.py  geospatial.py  graph.py  runner.py  timeseries.py
terraform/aws/: README.md  main.tf  variables.tf
tests/: test_adaptive_backpressure.py  test_alert_aggregation.py  test_alert_routing.py  test_bus.py  test_circuit_breaker_extended.py  test_dead_letter.py  test_deterministic_event_time.py  test_envelope.py  test_event_log.py  test_exactly_once_delivery.py  test_geometric_hash_extended.py  test_idempotency.py  test_materialized_views.py  test_metrics.py  test_production_reliability.py  test_replay.py  test_views_runner.py  test_worker_integration.py  test_zk_integration.py
