[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "mandala"
version = "0.1.0"
description = "Open-source event bridge between Samsara fleet telemetry and Descartes GLN customs/trade platforms."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Mandala Contributors" }]
requires-python = ">=3.11"
keywords = ["samsara", "descartes", "logistics", "customs", "cloudevents", "fleet", "telematics", "supply-chain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.27.0",
    "prometheus-client>=0.21.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
sink = [
    # Optional warehouse sink writer; install only if you run the dbt pipeline.
    "boto3>=1.34",
]
dev = [
    "ruff>=0.4",
]

[project.scripts]
mandala = "mandala.cli:main"

[project.urls]
Homepage = "https://github.com/theoddden/Mandala"
Documentation = "https://github.com/theoddden/Mandala"
Issues = "https://github.com/theoddden/Mandala/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mandala"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "S", "C4", "RET", "SIM"]
ignore = ["S101", "S104"]

