[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "mandala"
version = "0.1.0"
description = "Open-source logistics event bridge with detector sandbox, event replay, and adaptive backpressure. Connects Samsara fleet telemetry, Descartes customs, Vizion rail, FMCSA safety, and fuel-card networks via OpenTelemetry spans and MCP tools."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Mandala Contributors" }]
requires-python = ">=3.11"
keywords = ["samsara", "descartes", "logistics", "customs", "cloudevents", "fleet", "telematics", "supply-chain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.1",
    "fastapi>=0.115",
    "httpx>=0.27.0",
    "prometheus-client>=0.21.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "structlog>=24.4.0",
    "tenacity>=8.5.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
iceberg = [
    "pyiceberg>=0.6.0",
    "pyarrow>=14.0.0",
    "s3fs>=2024.0.0",
]
zk = [
    "aiofiles>=23.0.0",
    "httpx>=0.27.0",
]
sink = [
    # Optional warehouse sink writer; install only if you run the dbt pipeline.
    "boto3>=1.34",
]
rust = [
    # Rust-accelerated cryptographic and geometric operations
    "mandala-rust-ext>=0.1.0",
]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "psutil>=5.9",
]

[project.scripts]
mandala = "mandala.cli:main"

[project.urls]
Homepage = "https://github.com/theoddden/Mandala"
Documentation = "https://github.com/theoddden/Mandala"
Issues = "https://github.com/theoddden/Mandala/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mandala"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "S", "C4", "RET", "SIM"]
ignore = ["S101", "S104", "S110", "S112", "S603", "S607", "S314", "SIM108", "SIM102", "SIM103", "SIM105", "SIM118", "RET504", "RET505", "RET507", "UP006", "UP017", "UP035", "UP037", "UP042", "E501", "B905", "S108", "S311", "F401", "F841", "N806", "ASYNC240"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

