[package]
name = "mandala-rust-ext"
version = "0.2.0"
edition = "2021"

[lib]
name = "mandala_rust_ext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
sha2 = "0.10"
hmac = "0.12"
constant_time_eq = "0.3"
h3ron = { version = "0.16", optional = true }
base64 = "0.21"
hex = "0.4"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[features]
default = ["h3"]
h3 = ["dep:h3ron"]
