[package]
name = "mandala-rust-ext"
version = "0.2.0"
edition = "2021"

[lib]
name = "mandala_rust_ext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
sha2 = "0.10"
hmac = "0.12"
constant_time_eq = "0.3"
h3ron = { version = "0.16", optional = true }
geo = "0.23"
base64 = "0.21"
hex = "0.4"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

# ZK-SNARK dependencies (arkworks-rs)
ark-bls12-381 = { version = "0.4", optional = true }
ark-groth16 = { version = "0.4", optional = true }
ark-relations = { version = "0.4", optional = true }
ark-serialize = { version = "0.4", optional = true }
ark-ff = { version = "0.4", optional = true }
ark-ec = { version = "0.4", optional = true }
ark-poly = { version = "0.4", optional = true }
ark-std = { version = "0.4", optional = true, default-features = false, features = ["std"] }

[features]
default = ["h3"]
h3 = ["dep:h3ron"]
zk = ["dep:ark-bls12-381", "dep:ark-groth16", "dep:ark-relations", 
      "dep:ark-serialize", "dep:ark-ff", "dep:ark-ec", "dep:ark-poly", 
      "dep:ark-std"]
